--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Special Gift</title>
+    <title>Valentine Virtual Gift</title>
 </head>
 <body>
     <div class="greetings">
         
+        <span>M</span>
+        <span>G</span>
         <span>A</span>
-        <span>D</span>
-        <span>V</span>
-        <span>A</span>
-        <span>N</span>
-        <span>C</span>
-        <span>E</span>
+        <span> </span>
+        <span>P</span>
+        <span>O</span>
+        <span>G</span>
+        <span>I</span>
+        <span> </span>
         <span>"</span>
         <span>H</span>
         <span>A</span>
@@ -42,11 +44,11 @@
         <span>Y</span>
     </div>
     <div class="description">
-        <span>Click the button to see my virtual gift </span>
+        <span>Click niyo may makikita kayong kakaiba</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Click ME</a>
+            <a href="flower.html">Click ME kupal</a>
         </button>
         
     </div>
