--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <span>S</span>
     </div>
     <div class="description">
-        <span>Click niyo may makikita kayong kakaiba</span>
+        <span>Sa inyo ko nalang isend wala apagsendan eh HAHAHA</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Click ME kupal</a>
+            <a href="flower.html">Eto bulaklak</a>
         </button>
         
     </div>
