--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <span>P</span>
         <span>P</span>
         <span>Y</span>
-        <span>" </span>
+        <span> </span>
         <span>V</span>
         <span>A</span>
         <span>L</span>
@@ -37,6 +37,7 @@
         <span>N</span>
         <span>E</span>
         <span>S</span>
+        <span>" </span>
     </div>
     <div class="description">
         <span>Sa inyo ko nalang isend wala apagsendan eh HAHAHA</span>
