--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
     <title>Valentine Virtual Gift</title>
 </head>
 <body>
-   <div class="greetings">
+   <div class="valentine-message">
+    <span>H</span><span>A</span><span>P</span><span>P</span><span>Y</span><span> </span>
+    <span>V</span><span>A</span><span>L</span><span>E</span><span>N</span><span>T</span><span>I</span><span>N</span><span>E</span><span>S</span><span>!</span>
+</div>
+<div class="greetings">
     <span>M</span><span>G</span><span>A</span><span> </span><span>P</span><span>O</span><span>G</span><span>I</span>
 </div>
-<div class="valentine-message">
-    <span>"</span><span>"</span>
-    <span>H</span><span>A</span><span>P</span><span>P</span><span>Y</span><span> </span>
-    <span>V</span><span>A</span><span>L</span><span>E</span><span>N</span><span>T</span><span>I</span><span>N</span><span>E</span><span>S</span>
-    <span>!</span>
-</div>
+
 
     <div class="description">
         <span>Sa inyo ko nalang isend wala apagsendan eh HAHAHA</span>
