--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Valentine Virtual Gift</title>
+    <title>HAPPY VALENTINES ;)</title>
 </head>
 <body>
    <div class="valentine-message">
@@ -19,11 +19,11 @@
 
 
     <div class="description">
-        <span>Sa inyo ko nalang isend wala apagsendan eh HAHAHA</span>
+        <span>Eto Digital Flowers para maiba naman HAHAHA</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Eto bulaklak</a>
+            <a href="flower.html">Click Me!</a>
         </button>
         
     </div>
