--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
     <meta property="og:title"
-    <title id="glowing-title">HAPPY VALENTINES❤️</title>
+    <title>HAPPY VALENTINES❤️</title>
 </head>
 <body>
    <div class="valentine-message">
@@ -78,14 +78,6 @@
                 heartHalo.remove();
             }, 1500); // Remove after animation ends
         });
-    </script>
-    <script>
-        let glowState = false;
-        function glowTitle() {
-            document.title = glowState ? "Valentine Effect ❤️✨" : "Valentine Effect 💖";
-            glowState = !glowState;
-        }
-        setInterval(glowTitle, 1000);
     </script>
 </body>
 </html>
