--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <meta property="og:title"
-    <title>HAPPY VALENTINES❤️</title>
+   <meta property="og:title" content="HAPPY VALENTINES❤️">
+    <title>HAPPY VALENTINES ;)</title>
 </head>
 <body>
    <div class="valentine-message">
