--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
    <meta property="og:title" content="HAPPY VALENTINE'S DAY!❤️"
-    <title>HAPPY VALENTINE'S DAY!❤️</title>
+    <title>Happy Valentine's Day!❤️</title>
 </head>
 <body>
    <div class="valentine-message">
