--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <meta property="og:title" content="HAPPY VALENTINE'S DAY &#10084;">
-    <title>HAPPY VALENTINE'S DAY &#10084;</title>
+    <meta property="og:title" content="HAPPY VALENTINE'S DAY ;)">
+    <title>HAPPY VALENTINE'S DAY ;)</title>
 
 </head>
 <body>
