--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <div class="description">
-        <span>Eto Digital Flowers para maiba naman HAHAHA</span>
+        <span>Here Digital Flowers para maiba naman HAHAHA</span>
     </div>
     <div class="button">
         <button>
